<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <hk.gov.ogcio.wcag.widget.ScaleTextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <hk.gov.ogcio.wcag.widget.ScaleButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTimer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <hk.gov.ogcio.wcag.widget.ScaleTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_mandatory_fields_are_indicated_with_a_red_asterisk" />

            <hk.gov.ogcio.wcag.widget.ScaleTextView
                android:id="@+id/textViewFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_first_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <hk.gov.ogcio.wcag.widget.ScaleEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/first_name"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="40" />

            <hk.gov.ogcio.wcag.widget.ScaleTextView
                android:id="@+id/textViewLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_last_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <hk.gov.ogcio.wcag.widget.ScaleEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/last_name"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="40" />

            <hk.gov.ogcio.wcag.widget.ScaleTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_address"
                android:textSize="18sp"
                android:textStyle="bold" />

            <hk.gov.ogcio.wcag.widget.ScaleEditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/address"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:maxLength="100" />

            <hk.gov.ogcio.wcag.widget.ScaleTextView
                android:id="@+id/textViewDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_district"
                android:textSize="18sp"
                android:textStyle="bold" />

            <hk.gov.ogcio.wcag.widget.ScaleToolbarTextView
                android:id="@+id/selectDistrict"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="8dp"
                android:text="@string/choose_a_district" />

            <hk.gov.ogcio.wcag.widget.ScaleTextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_phone"
                android:textSize="18sp"
                android:textStyle="bold" />

            <hk.gov.ogcio.wcag.widget.ScaleEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/phone"
                android:ems="10"
                android:inputType="number"
                android:maxLength="8" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>