<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonYearUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/button_next_year"
                app:srcCompat="@drawable/button_up" />

            <TextSwitcher
                android:id="@+id/textSwitcherYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp" />

            <ImageButton
                android:id="@+id/imageButtonYearDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/button_last_year"
                app:srcCompat="@drawable/button_down" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonMonthUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/button_next_month"
                app:srcCompat="@drawable/button_up" />

            <TextSwitcher
                android:id="@+id/textSwitcherMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp" />

            <ImageButton
                android:id="@+id/imageButtonMonthDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/button_last_month"
                app:srcCompat="@drawable/button_down" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonDayUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/button_next_day"
                app:srcCompat="@drawable/button_up" />

            <TextSwitcher
                android:id="@+id/textSwitcherDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp" />

            <ImageButton
                android:id="@+id/imageButtonDayDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/button_last_day"
                app:srcCompat="@drawable/button_down" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/buttonConfirm"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_confirm"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>